# multiplex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cuemesh2-client/: build.rs
crates/cuemesh2-client/src/: connection.rs  discovery.rs  lib.rs  main.rs  state.rs  ui.rs  update.rs
crates/cuemesh2-client/tests/: update_over_wire.rs  update_staging.rs
crates/cuemesh2-controller/src/: editor.rs  lib.rs  main.rs  preflight.rs  server.rs  state.rs  sync.rs  ui.rs  update.rs
crates/cuemesh2-controller/tests/: handshake.rs  update_push.rs
crates/cuemesh2-media/src/: lib.rs  pipeline.rs
crates/cuemesh2-shared/: Cargo.toml
crates/cuemesh2-shared/examples/: update_sign.rs
crates/cuemesh2-shared/src/: hashing.rs  lib.rs  protocol.rs  show.rs  update.rs
crates/multiplex-client/: Cargo.toml
crates/multiplex-client/src/: connection.rs  discovery.rs  main.rs  state.rs  ui.rs  update.rs
crates/multiplex-controller/: Cargo.toml  build.rs
crates/multiplex-controller/src/: discovery.rs  editor.rs  lib.rs  main.rs  preflight.rs  server.rs  state.rs  update.rs  util.rs
crates/multiplex-media/: Cargo.toml
crates/multiplex-media/examples/: crossfade.rs  play_file.rs
crates/multiplex-media/src/: fades.rs  pipeline.rs
crates/multiplex-shared/examples/: update_keygen.rs
crates/multiplex-shared/src/: clock_sync.rs  lib.rs  logging.rs  protocol.rs  transfer.rs  update.rs
crates/playback-spike/: Cargo.toml
crates/playback-spike/src/: main.rs
docs/: OPERATION.md  PROGRESS.md
examples/: example_show.cuemesh.toml
scripts/: bundle-macos.sh  bundle-windows.ps1
