[workspace]
resolver = "2"
members = [
    "crates/cuemesh2-shared",
    "crates/cuemesh2-media",
    "crates/cuemesh2-controller",
    "crates/cuemesh2-client",
    "crates/playback-spike",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/davidroberthoare/CueMesh2"

[workspace.dependencies]
# Local crates
cuemesh2-shared = { path = "crates/cuemesh2-shared" }
cuemesh2-media  = { path = "crates/cuemesh2-media" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Networking / discovery
mdns-sd = "0.11"

# Media — v1_18 for SeekFlags::INSTANT_RATE_CHANGE (min GStreamer 1.18)
gstreamer = { version = "0.23", features = ["v1_18"] }
gstreamer-video = "0.23"
gstreamer-app = "0.23"

# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"

# Utility
sha2 = "0.10"
# Auto-update: signed artifacts + version comparison + atomic self-swap.
ed25519-dalek = "2"
base64 = "0.22"
semver = "1"
self-replace = "1"
# Controller-only: optional online refresh of the update bundle.
# rustls so we don't drag OpenSSL into cross-compiles.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
