[package]
name = "cuemesh2-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared protocol, show file, clock sync, and utility types for CueMesh2."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# For the update_keygen / update_sign release-tool examples only;
# verification and signing of fixed keys never need an RNG.
getrandom = "0.2"
anyhow = { workspace = true }
