[package]
name = "cuemesh2-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CueMesh2 controller: cue editor, run mode, and hub for connected clients."

[[bin]]
name = "cuemesh2-controller"
path = "src/main.rs"

[dependencies]
cuemesh2-shared = { workspace = true }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

mdns-sd = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
# Icon font (pure Rust, egui 0.29) — egui's default fonts lack symbol glyphs.
egui-phosphor = "0.7"
# Pure-egui file picker — no native GTK/Qt dependency, unlike `rfd`.
egui-file-dialog = "0.7"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
self-replace = { workspace = true }
reqwest = { workspace = true }
